Kafka Cloud Stream Producer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.kafka.producer.properties.enable.idempotence=true
 #spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 #spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="usuario" password="senha";
 spring.cloud.stream.kafka.binder.configuration.isolation.level=read_committed
-spring.cloud.stream.kafka.binder.brokers=events-broker-v1:9092
+spring.cloud.stream.kafka.binder.brokers=events-broker.org:9092
 spring.cloud.stream.kafka.binder.autoCreateTopics=false
