--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-## mongo config
-spring.data.mongodb.database=account_created
-spring.data.mongodb.authentication-database=account_created
-spring.data.mongodb.repositories=null
-spring.data.mongodb.enabled=true
-spring.data.mongodb.uri=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
-
 # Kafka Cloud Stream
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=100
@@ -13,5 +6,5 @@ spring.kafka.producer.properties.enable.idempotence=true
 #spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 #spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="usuario" password="senha";
 spring.cloud.stream.kafka.binder.configuration.isolation.level=read_committed
-spring.cloud.stream.kafka.binder.brokers=events-broker.org:9092
+spring.cloud.stream.kafka.binder.brokers=events-broker-localhost:9092
 spring.cloud.stream.kafka.binder.autoCreateTopics=false
